# my_dl_lib

./: main.py  pyproject.toml  requirements.txt  test.py
common/: basic_layers.py  functions.py  layers.py  model.py  optimizer.py  trainer.py  util.py  xp.py
dataset/: spiral.py
nlp/: CBOW.py  RNN.py  skip_gram.py  time_layer.py  word2vec.py
tests/: 100_Numpy_exercises.ipynb  test.py  test_trainer.py
tests/.ipynb_checkpoints/: 100_Numpy_exercises-checkpoint.ipynb
torch/: 0tensor.py  1grad.py  2dataset.py
