[project]
name = "my-dl-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.6.1",
    "gensim>=4.4.0",
    "huggingface-hub>=1.5.0",
    "ipywidgets>=8.1.8",
    "jieba>=0.42.1",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.3.0",
    "nltk>=3.5",
    "numpy>=1.19.0",
    "pandas>=3.0.1",
    "pickle-mixin>=1.0.2",
    "scikit-learn>=0.23.0",
    "spacy>=3.8.11",
    "torch>=2.10.0",
    "torchtext>=0.18.0",
    "transformers>=5.3.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
